--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -1,8 +1,12 @@
 .footer {
-    height: 250px;
+    max-height: 10em;
+    padding: 2em;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #edf3f6;
+    background-color: #008000;
+    color: #fff;
+    border-top: 1px solid #7a7a7a;
+    margin-top: 5em;
 }
