--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
 body {
-  background-color: #f6fcff;
+  background-color: #cecece;
   padding: 0;
   margin: 0;
   font-family: "Montserrat", sans-serif;
+  overflow-x: hidden;
 }
 
 a,
@@ -31,7 +32,7 @@ nav button:hover {
   text-align: center;
   cursor: pointer;
   border-radius: 10px;
-  width: 120px;
+  width: 10em;
   font-weight: bold;
   border: none;
   padding: 10px 15px;
@@ -43,9 +44,5 @@ nav button:hover {
   color: #fff;
 }
 
-.container {
-  background-color: #f8d7da;
-  border: 1px solid #f5c6cb;
-  padding: 5px;
-  border-radius: 5px;
-}
+
+
