--- a/src/pages/home/Home.module.css
+++ b/src/pages/home/Home.module.css
@@ -1,4 +1,40 @@
 .container {
-    width: 100%;
-    text-align: center;
+    width: 100vw;
+    
+    text-align: center;   
 }
+
+.banner {
+    width: 100%;
+    height: 80vh;
+    margin-top: 3.5em;
+    opacity: 60%;
+    
+}
+
+.container h1 {
+    position: relative;
+    font-size: 2.8em;
+    margin-top: -10em;
+    margin-bottom: 3em;
+    color: #ffffff;
+    padding: .5em;
+}
+
+.container_info {
+    margin-top: 7em;
+    margin-bottom: 2em;
+}
+
+.btn {
+    background-color: #1a8918;
+    color: #fff;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 10px;
+    width: 15em;
+    font-weight: bold;
+    border: none;
+    padding: 10px 15px;
+    font-size: 2em;
+  }
