--- a/src/pages/ComoFunciona/ComoFunciona.module.css
+++ b/src/pages/ComoFunciona/ComoFunciona.module.css
@@ -1,5 +1,19 @@
 .container {
     width: 100vw;
     text-align: center;
-    padding-top: 6em;   
+}
+
+.content {
+    padding: 3em;
+    text-align: center;
+}
+
+.content h2 {
+    margin-top: 2em;
+    font-size: 2em;
+    font-weight: bold;
+}
+
+.content p {
+    font-size: 1.2em;
 }
