parte da funcionalidade concluida

--- a/src/pages/Options/Options.module.css
+++ b/src/pages/Options/Options.module.css
@@ -23,6 +23,12 @@ background-color: #9e9797;
     border-radius: 10px;    
 }
 
+.container_terc h2 {
+    font-size: 1.5em;
+    color: #000;
+}
+
+
 .container_info {
     border-top: 1px solid #000;
     margin: 0 auto;
