--- a/src/pages/Options/Options.module.css
+++ b/src/pages/Options/Options.module.css
@@ -9,28 +9,35 @@ margin: 0 auto;
 border: 1px solid transparent;
 border-radius: 3em;
 width: 50em;
-height: 20em;
+min-height: 20em;
 background-color: #9e9797;
 }
 
 .container_terc {
     margin: 0 auto;
     margin-top: 2em;
-    height: 3em;
+    min-height: 3em;
     max-width: 25em;
     padding: 10px;
-    border: 1px solid black;
+    border: 1px solid rgb(116, 113, 113);
     border-radius: 10px;
-    display: flex;
-    color: #000;   
     list-style: none;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.5em;
+    margin-bottom: 1em;
+}
+
+.container_terc {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(60px, auto));
+    row-gap: 3px;  
 }
 
 .lista { 
-    padding-right: 10px;
+    margin-right: 15px;
+    background-color: #1a8918;
+    color: rgb(226, 226, 226);
+    padding: 10px;
+    border-radius: 50%;
+    font-size: 1.3em;
 }
 
 
