menu de hamburguer

--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -8,6 +8,7 @@
     background-color: #008000;
     color: #fff;
     border-top: 1px solid #7a7a7a;
-    margin-top: 5em;
     margin-bottom: 0;
+    position: relative;
+    bottom: -30em;
 }
