--- a/src/pages/home/Home.module.css
+++ b/src/pages/home/Home.module.css
@@ -4,11 +4,10 @@
 }
 
 .banner {
-    width: 100%;
+    width: 100vw;
     height: 80vh;
-    margin-top: 3.5em;
     opacity: 60%;
-    
+   
 }
 
 .container h1 {
@@ -16,13 +15,12 @@
     font-size: 2.8em;
     margin-top: -10em;
     margin-bottom: 3em;
-    color: #ffffff;
+    color: #dff0e3;
     padding: .5em;
 }
 
 .container_info {
     margin-top: 7em;
-    margin-bottom: 2em;
 }
 
 .btn {
